--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embed Widget</title>
+</head>
+<body>
+
+    <!-- Your Widget Embed Section -->
+    <div id="widget-container">
+        <!-- Replace the URL below with the widget code or URL provided by the service you want to embed -->
 <style>
     #ctrader-plugin-root {
         width: 100%;
@@ -27,4 +39,7 @@
             }
         });
     };
-</script>
+</script>    </div>
+
+</body>
+</html>
