--- a/index.html
+++ b/index.html
@@ -22,22 +22,14 @@
     }
 </style>
 
-<div id="ctrader-plugin-root"></div>
-<script id="init" type="text/javascript" defer src="https://app.ctrader.com/widget.js"></script>
-
+<div id="ctrader-plugin-root" style="width: 100%; height: 100%; position: relative"></div>
+<script id="init" type="text/javascript" defer src="https://ct.spotware.com/widget.js"></script>
 <script type="text/javascript">
     const script = document.getElementById('init');
-
+    
     script.onload = () => {
         putInitScript('runPlugin');
-        runPlugin('ctrader-plugin-root', {
-            "route": "/?lang=en&theme=light&u=letstrade747",
-            "appConfig": {
-                "chart": {
-                    "initialChartLayout": "Single"
-                }
-            }
-        });
+        runPlugin('ctrader-plugin-root', {"route":"/?lang=en&theme=light","appConfig":{"chart":{"initialChartLayout":"Single"}}});
     };
 </script>    </div>
 
